--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/philschatz/fetch-vcr.git"
+    "url": "git+https://github.com/askfora/fetch-vcr.git"
   },
   "keywords": [
     "fetch",
