--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "pretest": "./script/clean-for-test",
-    "test": "ava",
+    "test": "npx -r esm ava",
     "debug": "DEBUG=true node --inspect --debug-brk ./node_modules/ava/profile.js ./test/index.js",
     "build-browser": "rollup --config rollup.config.js"
   },
   "dependencies": {
-    "node-fetch": "^2.0.0",
-    "whatwg-fetch": "^2.0.3"
+    "node-fetch": "^3.0.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "ava": "^2.0.0",
-    "jsdom": "^14.0.0",
-    "rollup": "^1.1.1",
+    "ava": "^3.15.0",
+    "esm": "^3.2.25",
+    "jsdom": "^17.0.0",
+    "rollup": "^2.1.0",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
-    "standard": "^14.3.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "standard": "^16.0.1"
   },
   "directories": {
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/philschatz/fetch-vcr.git"
+    "url": "git+https://github.com/askfora/fetch-vcr.git"
   },
   "keywords": [
     "fetch",
